# database-exam-project

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  arm64.Dockerfile  start.sh  stuff.sql
.github/workflows/: auth-service.yml  data-importer.yml  data-transformer.yml  java-pipeline.yml  log-console.yml  logging-view.yml  neo4j-service.yml  root-app.yml  rust-pipeline.yml  sql-service.yml
conf/: README.md
conf/auth-service/: config.yml  docker-compose.yml
conf/data-importer/: config.yml  docker-compose.yml
conf/data-transformer/: config.yml  docker-compose.yml
conf/log-console/: config.yml  docker-compose.yml
conf/mongodb/: config.yml  docker-compose.yml  setup-mongo.sh
conf/mssql/: config.yml  create-database.sql  docker-compose.yml  init-db.sh
conf/neo4j/: config.yml  docker-compose.yml
conf/neo4j-service/: config.yml  docker-compose.yml
conf/redis/: docker-compose.yml
conf/sql-service/: config.yml  docker-compose.yml
core/auth-service/: HELP.md  README.md  auth-service.Dockerfile  docker-compose.yml  init-test-db.sql  pom.xml
core/log-console/: .env  .gitignore  Cargo.toml  README.md  TODO.md  dev.docker-compose.yml  docker-compose.yml  log-storage-server.Dockerfile  log-watcherd.Dockerfile
core/log-console/.github/workflows/: test-and-deploy.yml
core/log-console/contracts/: logging-contract.proto  schema.proto
core/log-console/core/fs-watcher/: Cargo.toml
core/log-console/core/fs-watcher/src/: lib.rs  multiline.rs  util.rs
core/log-console/core/storage/: Cargo.toml  build.rs
core/log-console/core/storage/src/: gather.rs  lib.rs  log_service.rs  model.rs
core/log-console/core/storage/src/query_lang/: command.rs  mod.rs  parser.rs
core/log-console/log-storage-server/: Cargo.toml  build.rs
core/log-console/log-storage-server/src/: alert.rs  auth.rs  connection.rs  gather.rs  log_service.rs  main.rs  model.rs  monitor_service.rs  rest.rs
core/log-console/log-storage-server/src/query_lang/: command.rs  mod.rs  parse.rs
core/log-console/log-watcherd/: Cargo.toml
core/log-console/log-watcherd/src/: log_listener.rs  main.rs
core/log-console/src/log-storage-server/: main.rs
core/log-console/src/log-watcherd/: main.rs
core/logging-view/: .env.local  README.md  logging-view.Dockerfile  (+3 more)
documents/: YouBook.postman_collection.json
hack/: compose-list  start-app  wait-for-container.sh  xpath-value
(+138 files in other folders)
