[package]
name = "log-storage-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {workspace = true}
env_logger = {workspace = true}
dotenv = {workspace = true}
prost = "0.11.9"
tokio = {version = "1.27.0", features = ["full"]}
tonic = "0.9.1"
mongodb = "2.4.0"
serde = {version = "1.0.160", feature = ["derive"]}
anyhow = "1.0.70"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
crossbeam-channel = "0.5.8"

[build-dependencies]
tonic-build = "0.9.1"
